ci: update workflows for reorganized documentation structure
- Update docs.yml to use docs/build-config paths for sphinx and mkdocs builds
- Fix documentation tool installation to use optional dependency groups
- Add requirements-dev.txt to CI dependency tracking and labeling rules
- Maintain compatibility with reorganized build configuration

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -17,6 +17,7 @@
     - 'config/**/*'
     - 'pyproject.toml'
     - 'requirements.txt'
+    - 'requirements-dev.txt'
     - 'uv.lock'
 
 # CLI components
@@ -134,6 +135,7 @@
   - any-glob-to-any-file:
     - 'pyproject.toml'
     - 'requirements.txt'
+    - 'requirements-dev.txt'
     - 'uv.lock'
     - '.github/dependabot.yml'
 
