fix: resolve CI failures for PR #137
- Add ruff to dev dependencies for linting support
- Fix browser_use_adapter test by properly mocking BrowserConfig
- Fix Docker build path in CI workflow (docker/Dockerfile.worker)
- Rename browser-use analysis file to follow kebab-case convention
- Apply ruff formatting to test files

This addresses all failing CI checks to enable merge.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -328,9 +328,9 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build worker Docker image
-        if: hashFiles('Dockerfile.worker') != ''
+        if: hashFiles('docker/Dockerfile.worker') != ''
         run: |
-          docker build -f Dockerfile.worker -t test-worker .
+          docker build -f docker/Dockerfile.worker -t test-worker .
 
       - name: Test Docker services
         if: hashFiles('docker-compose.yml') != ''
