fix: update docker-compose command to docker compose
Modern Docker uses 'docker compose' instead of 'docker-compose'.
This fixes the Docker build test CI failure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -335,8 +335,8 @@ jobs:
       - name: Test Docker services
         if: hashFiles('docker-compose.yml') != ''
         run: |
-          # Test docker-compose configuration
-          docker-compose config
+          # Test docker compose configuration
+          docker compose config
 
   performance-test:
     name: Performance Tests
