fix: resolve CI pipeline failures
- Add pytest-timeout dependency to fix test argument errors
- Fix Windows CI shell compatibility (bash vs PowerShell)
- Fix linting whitespace issue in anti-detection test
- Ensure all CI steps use bash shell for cross-platform compatibility

These fixes address the core CI failures:
- pytest: error: unrecognized arguments: --timeout
- PowerShell syntax errors on Windows runners
- Linting failures due to whitespace

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,6 +224,7 @@ jobs:
           fi
 
       - name: Run comprehensive test suite
+        shell: bash
         run: |
           # Set test markers based on platform and test type
           if [ "${{ runner.os }}" == "Windows" ] || [ "${{ runner.os }}" == "macOS" ]; then
