--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,7 @@ dev = [
     "pytest-asyncio>=1.0.0,<2.0.0",
     "pytest-cov>=6.1.1,<7.0.0",
     "pytest-mock>=3.14.1,<4.0.0",
+    "pytest-timeout>=2.3.1,<3.0.0",
     "fakeredis>=2.29.0,<3.0.0",
     "ruff>=0.11.12,<0.12.0",
     "black>=25.1.0,<26.0.0",
