fix: install pytest-timeout in fast-check workflow
The fast-check workflow was failing because it uses --timeout=30
argument but only installed pytest-xdist, not pytest-timeout.

Added pytest-timeout to the dynamic dependency installation
to resolve the "unrecognized arguments: --timeout" error.

--- a/.github/workflows/fast-check.yml
+++ b/.github/workflows/fast-check.yml
@@ -116,8 +116,8 @@ jobs:
 
       - name: Run fastest unit tests only
         run: |
-          # Install pytest-xdist for parallel testing
-          uv add --dev pytest-xdist
+          # Install pytest-xdist for parallel testing and pytest-timeout for timeouts
+          uv add --dev pytest-xdist pytest-timeout
           
           # Run only fast unit tests (no browser, no integration)
           uv run pytest tests/unit \
