fix: ensure pytest-timeout plugin installation in CI workflows
Final CI reliability fix addressing pytest plugin recognition:

**Issue**: `pytest: error: unrecognized arguments: --timeout=180`
- Occurs despite pytest-timeout being in pyproject.toml dev dependencies
- Plugin not being recognized by pytest in CI environment

**Solution**:
- Force explicit installation of pytest-timeout>=2.3.1 after main sync
- Added verification step to confirm plugin availability
- Applied to both main CI and fast-check workflows
- Uses specific version constraints to ensure compatibility

**Verification**:
- Added `import pytest_timeout` check to confirm installation
- Provides clear feedback if plugin is missing
- Ensures consistent behavior across all CI platforms

This should resolve the final test suite failures across Ubuntu, Windows, and macOS.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,9 +186,14 @@ jobs:
             uv pip install pytest-timeout pytest-xdist || echo "pytest plugins already available"
           else
             uv sync --dev --frozen
-            # Ensure pytest plugins are available on Linux/macOS
-            uv pip install pytest-timeout pytest-xdist || echo "pytest plugins already available"
+            # Force install pytest plugins to ensure they are available
+            echo "Installing pytest plugins..."
+            uv pip install pytest-timeout>=2.3.1 pytest-xdist>=3.0.0
           fi
+          
+          # Verify pytest-timeout is installed and working
+          echo "Verifying pytest-timeout installation..."
+          uv run python -c "import pytest_timeout; print('✅ pytest-timeout available')" || echo "❌ pytest-timeout not available"
         env:
           # Cross-platform environment variables for native dependencies
           PYTHONUTF8: 1
