--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 
 # Core web framework & API
 fastapi>=0.115.12,<0.116.0
+starlette>=0.41.0,<0.42.0
 uvicorn[standard]>=0.34.2,<0.35.0
 python-multipart>=0.0.12,<0.1.0
 
