--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,13 +32,13 @@ classifiers = [
 
 dependencies = [
     # Core web framework & API
-    "fastapi>=0.115.12,<0.116.0",
-    "starlette>=0.41.0,<0.42.0", # Explicit dependency for middleware
-    "uvicorn[standard]>=0.34.2,<0.35.0",
+    "fastapi>=0.115.12,<0.116.0", # Latest stable release 2025
+    "starlette>=0.41.0,<0.42.0", # Compatible with FastAPI 0.115.12
+    "uvicorn[standard]>=0.34.2,<0.35.0",  # Latest available stable release 2025
     "python-multipart>=0.0.12,<0.1.0", # For FastAPI file uploads
     
     # Data validation & configuration
-    "pydantic>=2.11.5,<3.0.0", # Updated for browser-use 0.2.6 compatibility
+    "pydantic>=2.11.5,<3.0.0", # Latest stable release 2025, browser-use 0.2.6 compatibility
     "pydantic-settings>=2.8.0,<3.0.0",
     "python-dotenv>=1.1.0,<2.0.0",
     "pyyaml>=6.0.2,<7.0.0",
@@ -120,10 +120,11 @@ llm = [
 
 # Observability and tracing (optional monitoring features)
 observability = [
-    "opentelemetry-api>=1.29.0,<2.0.0",
-    "opentelemetry-sdk>=1.29.0,<2.0.0", 
-    "opentelemetry-instrumentation-fastapi>=0.54.0,<1.0.0",
-    "opentelemetry-exporter-prometheus>=0.54.0,<1.0.0",
+    "opentelemetry-api>=1.34.1,<2.0.0", # Latest stable release June 2025
+    "opentelemetry-sdk>=1.34.1,<2.0.0", # Latest stable release June 2025
+    "opentelemetry-instrumentation-fastapi>=0.54b0,<1.0.0", # Latest beta
+    "opentelemetry-exporter-prometheus>=0.54b1,<1.0.0", # Latest beta
+    "opentelemetry-instrumentation-starlette>=0.54b0,<1.0.0", # For Starlette instrumentation
 ]
 
 # Code parsing tools (optional development features)
