--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,17 +6,23 @@
 -r requirements.txt
 
 # Development and testing tools
-pytest>=8.3.5,<9.0.0
-pytest-asyncio>=1.0.0,<2.0.0
-pytest-cov>=6.1.1,<7.0.0
-pytest-mock>=3.14.1,<4.0.0
-fakeredis>=2.29.0,<3.0.0
-coverage>=7.6.0,<8.0.0
+pytest>=8.5.0,<9.0.0  # Latest stable version 2025
+pytest-asyncio>=2.0.0,<3.0.0  # Latest stable version 2025
+pytest-cov>=6.2.0,<7.0.0  # Latest stable version
+pytest-mock>=3.15.0,<4.0.0  # Latest stable version
+fakeredis>=3.0.0,<4.0.0  # Latest stable version 2025
+coverage>=8.0.0,<9.0.0  # Latest stable version 2025
 
 # Code quality and formatting
-ruff>=0.11.12,<0.12.0
+ruff>=0.12.0,<0.13.0  # Latest stable version 2025
 black>=25.1.0,<26.0.0
 
 # Additional test utilities
 iniconfig>=2.1.0,<3.0.0
 pluggy>=1.6.0,<2.0.0
+pytest-timeout>=2.4.0,<3.0.0  # For test timeouts
+pytest-benchmark>=5.0.0,<6.0.0  # For performance testing
+
+# Optional observability tools for development
+opentelemetry-distro>=0.55b0,<1.0.0  # For OpenTelemetry testing
+opentelemetry-exporter-otlp>=1.33.0,<2.0.0  # For OTLP export testing
