chore: add benchmark artifacts to .gitignore and clean up tracked files
- Add .benchmarks/ directory to gitignore (pytest-benchmark artifacts)
- Add benchmark_results/ directory to gitignore (custom results)
- Add benchmark log and json patterns to gitignore
- Remove tracked benchmark artifacts from repository
- Clean up temporary benchmark files

This ensures benchmark results are kept local and not committed to the repository,
while maintaining the benchmark test infrastructure for development use.

--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,14 @@ __pypackages__/
 .cursorignore
 .cursorindexingignore
 
+# Benchmark artifacts
+.benchmarks/
+benchmark_results/
+*_benchmark*.log
+*_benchmark*.json
+.benchmark/
+benchmarks/results/
+
 # Backup files
 *.bak
 *.backup
